# robo_car

./: .gitignore  README.md
hardware/: README.md
hardware/sensors/lidar_hokuyo_urg_04lx/: link.txt
scripts/: README.md  os_settings.sh  ros_install.sh
software/: CMakeLists.txt  README.md
software/autonomous_driving/robocar/: CMakeLists.txt  robocar_main.cpp
software/client/: CMakeLists.txt  main_clientsocket.cpp
software/client/include/: ClientSocket.h
software/client/src/: ClientSocket.cpp
software/gui/: CMakeLists.txt  main_gui.cpp
software/gui/include/: Socket.h  mainwindow.h
software/gui/include/communication/: ClientSocket.h  Socket.h
software/gui/src/: Socket.cpp  client.cpp  client.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
software/gui/src/communication/: ClientSocket.cpp  Socket.cpp
software/include/: client.h  server.h
software/include/comm/: ClientSocket.h  ServerSocket.h  Socket.h  client.h  server.h
software/remote_controlled/client/: CMakeLists.txt  roboclient_main.cpp
software/remote_controlled/client/include/: ClientSocket.h  Socket.h
software/remote_controlled/client/src/: ClientSocket.cpp
software/remote_controlled/robocar/: CMakeLists.txt
software/remote_controlled/robocar/include/car/sensors/: PCA9685.h  Ultrasonic.h
software/remote_controlled/robocar/include/client/: ClientSocket.h
software/remote_controlled/robocar/include/server/: Server.h
software/remote_controlled/robocar/include/server/communication/: Socket.h
software/remote_controlled/robocar/include/slam/: SlamMap.h  Trajectory.h
software/remote_controlled/robocar/src/car/sensors/: GearMotor.cpp  PCA9685.cpp  SteeringServo.cpp  Ultrasonic.cpp
software/remote_controlled/robocar/src/client/: ClientSocket.cpp  Socket.cpp  main.cpp
software/remote_controlled/robocar/src/server/: Server.cpp
software/remote_controlled/robocar/src/server/communication/: ServerSocket.cpp  Socket.cpp
software/remote_controlled/robocar/src/slam/: SlamMap.cpp
software/remote_controlled/roboclient/: CMakeLists.txt
software/remote_controlled/roboclient/src/: Socket.cpp
software/remote_controlled/robocontrol/: CMakeLists.txt  main_robocontrol.cpp
software/remote_controlled/robocontrol/include/: mainwindow.h
software/remote_controlled/robocontrol/include/communication/: ClientSocket.h  SocketException.h
software/remote_controlled/robocontrol/src/: mainwindow.cpp  mainwindow.ui
software/remote_controlled/robocontrol/src/communication/: ClientSocket.cpp
software/remote_controlled/roboslam/: hokuyo_hector_slam.rviz
software/remote_controlled/slam/: hokuyo_hector_slam.launch
software/remote_controlled/testing/: client.h  main_server.cpp  picamera_stream.py  server.cpp  servomotor.py
software/remote_controlled/testing/robotic_car/: CMakeLists.txt  main.cpp
software/remote_controlled/testing/robotic_car/include/: RoboticCar.h
software/remote_controlled/testing/robotic_car/include/sensors/: Camera.h  CameraServo.h  SteeringServo.h  Ultrasonic.h
software/remote_controlled/testing/robotic_car/old/robocar/: robocar_main.cpp
software/remote_controlled/testing/robotic_car/old/robocar/include/sensors/: CameraServo.h  PCA9685.h  Ultrasonic.h
software/remote_controlled/testing/robotic_car/old/robocar/src/: Car.cpp
software/remote_controlled/testing/robotic_car/old/robocar/src/bus/: I2C.cpp
software/remote_controlled/testing/robotic_car/old/robocar/src/communication/: ServerSocket.cpp  Socket.cpp
software/remote_controlled/testing/robotic_car/old/robocar/src/sensors/: GearMotor.cpp  SteeringServo.cpp  Ultrasonic.cpp
software/remote_controlled/testing/robotic_car/src/: RoboticCar.cpp
software/remote_controlled/testing/robotic_car/src/sensors/: Camera.cpp  GearMotor.cpp  SteeringServo.cpp  Ultrasonic.cpp
software/robocar/: CMakeLists.txt  robocar_main.cpp
software/robocar/include/: Car.h  Server.h
software/robocar/include/car/: Car.h
software/robocar/include/car/bus/: I2C.h
software/robocar/include/car/sensors/: CameraServo.h  GearMotor.h  SteeringServo.h  Ultrasonic.h
software/robocar/include/comm/: ClientSocket.h  I2C.h  ServerSocket.h  Socket.h
software/robocar/include/sensors/: GearMotor.h  MPU6050.h  PCA9685.h  SteeringServo.h  Ultrasonic.h
software/robocar/include/server/: Server.h
software/robocar/include/server/communication/: ServerSocket.h  Socket.h
software/robocar/include/slam/: SlamMap.h
software/robocar/src/: Car.cpp  main_clientsocket.cpp  main_i2c.cpp  main_serversocket.cpp  robocar_main.cpp
software/robocar/src/car/: Car.cpp
software/robocar/src/car/bus/: I2C.cpp
software/robocar/src/car/sensors/: Camera.cpp  CameraServo.cpp  GearMotor.cpp  MPU6050.cpp  Ultrasonic.cpp
software/robocar/src/comm/: I2C.cpp  ServerSocket.cpp  Socket.cpp
software/robocar/src/communication/: ServerSocket.cpp
software/robocar/src/sensors/: CameraServo.cpp  GearMotor.cpp  MPU6050.cpp  PCA9685.cpp  SteeringServo.cpp  Ultrasonic.cpp
software/robocar/src/server/: Server.cpp
software/robocar/src/server/communication/: ServerSocket.cpp  Socket.cpp
software/robocar/src/slam/: SlamMap.cpp  Trajectory.cpp
software/slam/: hokuyo_hector_slam.launch
software/src/: client.cpp  main.cpp  main_client.cpp  main_clientsocket.cpp  main_server.cpp  main_serversocket.cpp  server.cpp
software/src/comm/: ClientSocket.cpp  ServerSocket.cpp  Socket.cpp  client.cpp  server.cpp
software/testing/: client.cpp  gearmotor.py  hokuyo_lidar.py  main_client.cpp  picamera_stream.py  robo_car_picamera.py  server.h  servomotor.py  servomotor_steering.py  ultrasonic.py
